# RTK_OpenFlashloader

./: .gitignore  CMakeLists.txt  FlashLoader.ld  FlashLoader.ld.S  LICENSE  README.md  build.py  project.config
JLinkDevices/Realtek/AmebaDPlus/: RTL8721DXX.xml
JLinkDevices/Realtek/AmebaGreen2/: RTL8721F.xml
JLinkDevices/Realtek/AmebaLite/: RTL8720.xml
JLinkDevices/Realtek/AmebaSmart/: RTL8730.xml
JLinkDevices/Realtek/AmebaZ2/: RTL8720CX.xml
devices/: RTL8721F.xml
inc/: config.h
scripts/: CI.py  installer.py  package.py
src/: FlashDev.c  FlashPrg.c
